--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: ShiftKill
-version: 1.0.0-DEVELOPMENT-SNAPSHOT
+version: 1.0.1-DEVELOPMENT-SNAPSHOT
 main: com.gmail.gogobebe2.shiftkill.ShiftKill
-description: When players are killed, items in their inventory are automatically added to the player who killed them, in order of priority. If the inventory is full, all other items are dropped on the ground.
+description: When players are killed, items in their inventory are automatically added to the player who killed them. If the inventory is full, all other items are dropped on the ground. In addition, this plugin adds new items to the game.
 author: William Bryant (gogobebe2)
 website: gogobebe2@gmail.com
