--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.gmail.gogobebe2</groupId>
     <artifactId>ShiftKill</artifactId>
-    <version>1.4.7-DEVELOPMENT-SNAPSHOT</version>
+    <version>1.0.0-PREALPHA-SNAPSHOT</version>
 
     <build>
         <pluginManagement>
