--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.gmail.gogobebe2</groupId>
     <artifactId>ShiftKill</artifactId>
-    <version>1.0.6-PREALPHA-SNAPSHOT</version>
+    <version>1.0.0-ALPHA-SNAPSHOT</version>
 
     <build>
         <pluginManagement>
@@ -35,6 +35,13 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>com.gmail.gogobebe2</groupId>
+            <artifactId>ShiftSpawn</artifactId>
+            <version>LATEST</version>
+            <scope>system</scope>
+            <systemPath>/home/william/IdeaProjects/ShiftSpawn/target/ShiftSpawn-1.0.5-BETA-SNAPSHOT.jar</systemPath>
         </dependency>
     </dependencies>
 
